...
            "state" : "translated",
            "value" : "Règle"
          }
        }
      }
    },
    "Sage" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Salbei"
          }
...
            "state" : "translated",
            "value" : "forme"
          }
        }
      }
    },
    "Share" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Teilen"
          }
...
            "state" : "translated",
            "value" : "Guide d'étude…"
          }
        }
      }
    },
    "Study tape" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Lernklebeband"
          }
...
            "state" : "translated",
            "value" : "Votre étagère est prête."
          }
        }
      }
    },
    "Your video is ready." : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dein Video ist fertig."
          }
...
